# organization

./: .dockerignore  Cargo.toml  Dockerfile  README.md  copy-so-files.sh  docker-compose.yaml
api/: copy-so-files.sh
api/cli/src/: main.rs
api/cli/src/organization/: mod.rs
api/cli/src/organization/action/: mod.rs
api/organization/: Cargo.toml
api/organization/migrations/2022-05-09-114656_organizations/: down.sql
api/organization/migrations/2022-05-09-115028_users/: down.sql  up.sql
api/organization/src/: config.rs  main.rs
api/organization/src/api/: group.rs  mod.rs
api/organization/src/dal/: mod.rs
api/organization/src/dal/models/: group.rs  user_group.rs
cli/: Cargo.toml
cli/src/organization/: cli.rs
cli/src/organization/action/: cli.rs  mod.rs  requests.rs
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/misc/: configuration.json  nginx.conf
frontend/misc/.well-known/: configuration.json
frontend/src/: App.vue  config.json  main.ts
frontend/src/components/: Notification.vue  NotificationList.vue
frontend/src/services/: organization.ts
frontend/src/store/: index.ts  notifications.ts
frontend/src/types/: api.ts  notification.ts  organization.ts  store.ts
frontend/src/views/: HomeView.vue
organization/: Cargo.toml
organization/migrations/2022-05-09-114656_organizations/: up.sql
organization/migrations/2022-05-09-115028_users/: up.sql
organization/migrations/2022-05-09-120531_groups/: down.sql  up.sql
organization/src/: config.rs  main.rs
organization/src/api/: api_error.rs  group.rs  organization.rs  user.rs
organization/src/dal/: schema.rs
organization/src/dal/db/: connection.rs  mod.rs
organization/src/dal/models/: group.rs  mod.rs  organization.rs  user.rs  user_group.rs  user_organization.rs
