[package]
name = "organization-cli"
version = "0.1.0"
edition = "2021"
description = "Organization CLI"
authors = ["Louis Perdereau <organization-rest-api@lperdereau.dev>"]
keywords = ["organization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.16", features = ["derive", "env", "cargo", "wrap_help"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_derive = { version = "1.0.100" }
serde_json = { version = "1.0.40" }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.6"
log = "0.4"
term-table = "1.3.2"
