[package]
name = "organization"
version = "0.1.0"
edition = "2021"
description = "Organization API"
authors = ["Louis Perdereau <organization-rest-api@lperdereau.dev>"]
keywords = ["organization"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
clap = { version = "3.1.16", features = ["derive", "env", "cargo", "wrap_help"] }
diesel = { version = "1.4.8", features = ["postgres", "uuid", "r2d2"] }
diesel_migrations = "1.4.0"
lazy_static = "1.4.0"
paperclip = { git = "https://github.com/paperclip-rs/paperclip", rev = "4c1230ce9f790e4b4f3cdb261f53d69f4fde546d", features = ["actix4", "v3", "chrono", "uuid"] }
serde = { version = "1.0.100", features = ["derive"] }
serde_derive = { version = "1.0.100" }
serde_json = { version = "1.0.40" }
uuid = { version = "0.6", features = ["serde", "v4"] }
env_logger = "0.6"
log = "0.4"
r2d2 = "0.8.9"
